# pypmed

./: README.md  pypmed_example_department_usage.ipynb  pypmed_example_usage.ipynb  pyproject.toml
.github/workflows/: python-app.yml
pypmed/: apis.py  checks.py  filters.py  parsers.py
tests/: test_apis.py
