[tool.poetry]
name = "pypmed"
version = "0.1.3"
description = "python wrapper for pubmed apis --> https://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi/"
authors = ["Jeremy Watt <jermwatt@gmail.com>"]
readme = "README.md"
packages = [{include = "pypmed"}]

license = "MIT"

homepage = "https://github.com/jermwatt/pypmed"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.11"
requests = "^2.28.2"
rapidfuzz = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
